# Matrix

./: .gitignore  CMakeLists.txt  README.md
include/: container.hpp  floating_point_comparison.hpp  iterator.hpp  matrix.hpp  old_matrix.hpp  random_matrix.hpp
src/: end_to_end.cpp
tests/: CMakeLists.txt
tests/end_to_end/: CMakeLists.txt  det.sh
tests/end_to_end/src/: bareiss.cpp  driver.cpp  end_to_end.cpp  gauss.cpp  generator.cpp  test_gen.cpp
tests/src/: arithmetic.cpp  arithmetics.cpp  big_five_tests.cpp  elements_access.cpp  iterators.cpp  operators_tests.cpp  other_methods.cpp
tests/unit_tests/: CMakeLists.txt
tests/unit_tests/src/: arithmetics.cpp  constructors.cpp  iterators.cpp
